--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
             <h1></h1>
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -56,12 +56,28 @@
                     <li></li>
                 </ul>
             </div>
+            <form>
+                <label>
+                    Name
+                    <input type="text">
+                </label>
+                <label>
+                    email
+                    <input type="text">
+                </label>
+                <label>
+                    comments
+                    <input type="comments">
+                </label>
+            </form>
         </main>
         <footer>
             <div class="halfer"></div>
             <div class="halfer"></div>
             <div>
                 <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
                     <li><a href=""></a></li>
                 </ul>
             </div>
