--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
             <h1></h1>
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <p></p>
             <p></p>
-        </section>
             <div>
-
                 <h2></h2>
                 <ul>
                     <li></li>
@@ -58,21 +56,24 @@
             </div>
             <section aria-labelledby="pictures of food">
                     <h2 id="pictures of food"></h2>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
+                    <div><img src="" alt=""></div>
+                    <div><img src="" alt=""></div>
+                    <div><img src="" alt=""></div>
+                    <div><img src="" alt=""></div>
             </section>
             <section aria-labelledby="about us">
                 <h2 id="about us"></h2>
                 <p></p>
                 <p></p>
+            </section>
         </main>
         <footer>
             <div class="halfer"></div>
             <div class="halfer"></div>
             <div>
                 <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
                     <li><a href=""></a></li>
                 </ul>
             </div>
