--- a/menu.html
+++ b/menu.html
@@ -9,9 +9,9 @@
             <h1></h1>
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -62,6 +62,8 @@
             <div class="halfer"></div>
             <div>
                 <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
                     <li><a href=""></a></li>
                 </ul>
             </div>
