--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UFT-8"/>
         <title>Restauarant</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -16,44 +18,44 @@
             </nav>
         </header>
         <main>
-            <p></p>
-            <p></p>
+            <p>Excepteur excepteur Lorem anim ipsum id do. Sint ex labore incididunt laborum mollit irure ipsum aliqua dolor cupidatat do veniam. Proident ullamco do excepteur voluptate consectetur eiusmod culpa pariatur.</p>
+            <p>Est sunt ullamco fugiat ipsum fugiat incididunt minim elit officia. Eu ex ea non proident Lorem officia enim. Velit laborum aliquip incididunt pariatur. Incididunt elit officia culpa consequat ut.</p>
         </section>
             <div>
 
-                <h2></h2>
+                <h2>Tacos</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Velit id aute amet dolor ad exercitation fugiat est.</li>
+                    <li>In eiusmod irure esse ad laboris.</li>
+                    <li>Irure consectetur pariatur deserunt anim proident sit aliqua consectetur voluptate eiusmod cupidatat culpa magna nulla.</li>
+                    <li>Adipisicing elit qui id id esse ut minim adipisicing occaecat aliqua id laborum.</li>
                 </ul>
             </div>
             <div>
-                <h2></h2>
+                <h2>Burritos</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Et adipisicing elit voluptate ullamco culpa nostrud incididunt ea in enim eiusmod aliquip.</li>
+                    <li>Est et et aute irure.</li>
+                    <li>Irure duis exercitation aliqua sunt dolore velit est magna occaecat voluptate aliquip.</li>
+                    <li>Fugiat ipsum dolore ullamco do mollit.</li>
                 </ul>
             </div>
             <div>
-                <h2></h2>
+                <h2>Quesidillas</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Fugiat cupidatat esse velit culpa aliquip.</li>
+                    <li>Fugiat enim consequat ex eiusmod aliquip cillum incididunt anim quis Lorem Lorem labore elit.</li>
+                    <li>Nisi in in dolore ullamco voluptate tempor est proident excepteur.</li>
+                    <li>Consectetur eiusmod est nulla cupidatat ut minim Lorem incididunt consequat tempor officia excepteur.</li>
                 </ul>
             </div>
             <div>
-                <h2></h2>
+                <h2>Nachos</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Est aute ipsum ea culpa exercitation cillum.</li>
+                    <li>Tempor occaecat qui laborum et eiusmod aute occaecat fugiat.</li>
+                    <li>Sunt aliquip ut consequat dolor id excepteur consectetur nisi eu aute ut non.</li>
+                    <li>Eu voluptate voluptate consequat nisi duis id minim sunt consectetur irure sint proident nulla.</li>
                 </ul>
             </div>
             <form>
