--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta charset="UFT-8"/>
-        <title>Restauarant</title>
+        <title>Restaurant</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h1></h1>
+            <h1>Maggie's Restaurant</h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -15,57 +17,57 @@
                 </ul>
             </nav>
         </header>
+        <section aria-labelledby="pictures of food">
+                <h2 id="pictures of food"></h2>
+                <div><img src="http://www.placepuppy.net/400/250" alt="Tacos"></div>
+                <div><img src="http://www.placepuppy.net/400/250" alt="Burritos"></div>
+                <div><img src="http://www.placepuppy.net/400/250" alt="Quesidillas"></div>
+                <div><img src="http://www.placepuppy.net/400/250" alt="Nachos"></div>
+        </section>
+        <section aria-labelledby="about us">Adipisicing sit aute ex ea magna ipsum.Commodo aliquip aliquip dolor ipsum adipisicing adipisicing nisi et ea.
+            <h2 id="about us"></h2>
+            <p>Est cupidatat commodo minim magna voluptate enim tempor. Sint incididunt sunt velit nisi deserunt ea magna occaecat labore irure. Et elit commodo nostrud ea enim occaecat cupidatat veniam aliquip. Laboris ex laboris proident qui adipisicing eiusmod magna. Ipsum labore eiusmod reprehenderit labore eu incididunt ad sunt eiusmod aliquip voluptate. Labore aliqua ea laborum dolore dolor commodo adipisicing adipisicing in ad labore ullamco quis cillum. Veniam quis et duis pariatur consectetur minim anim ex ex mollit tempor ex.</p>
+            <p>Elit amet dolore sit voluptate. Id aliquip enim nostrud ipsum qui culpa qui qui occaecat duis do id tempor dolore. Laborum cupidatat adipisicing ea aliqua incididunt pariatur.</p>
+        </section>
         <main>
-            <p></p>
-            <p></p>
+            <p>Cupidatat et aliqua incididunt nisi elit labore nisi incididunt non excepteur. Laborum eiusmod laborum officia ex laborum cupidatat sit. Aute in do cupidatat sunt. Esse minim dolor officia velit amet nisi. Deserunt irure excepteur quis excepteur exercitation excepteur consectetur aute nostrud ipsum deserunt sint. Exercitation sunt ipsum Lorem adipisicing aliquip.</p>
+            <p>Et ut aliqua nisi dolore aute. Irure esse ea Lorem ad cillum. Exercitation irure consequat aliqua exercitation. Veniam ipsum aute nisi qui.</p>
             <div>
                 <h2></h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Sit qui non magna pariatur.</li>
+                    <li>Occaecat ea veniam id nostrud commodo ullamco ipsum nulla amet adipisicing.</li>
+                    <li>Labore adipisicing incididunt reprehenderit nostrud non sunt tempor.</li>
+                    <li>Eu dolore dolor aliquip occaecat adipisicing consectetur dolore aliquip veniam occaecat non pariatur est.</li>
                 </ul>
             </div>
             <div>
                 <h2></h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Adipisicing esse incididunt est commodo sint et do minim ipsum.</li>
+                    <li>Veniam occaecat cillum minim amet.</li>
+                    <li>Ullamco adipisicing cupidatat velit ea quis nostrud qui ipsum enim do incididunt adipisicing ut velit.</li>
+                    <li>Deserunt quis id id ipsum aliqua et quis est qui qui.</li>
                 </ul>
             </div>
             <div>
                 <h2></h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Nulla ullamco velit enim mollit consectetur sint nostrud eu labore consectetur labore excepteur sit cillum.</li>
+                    <li>Labore ut sit anim labore reprehenderit deserunt.</li>
+                    <li>Est quis irure in labore voluptate Lorem Lorem veniam labore pariatur officia elit dolore tempor.</li>
+                    <li>Eiusmod non id officia duis tempor aliquip consequat veniam officia.</li>
                 </ul>
             </div>
             <div>
                 <h2></h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Exercitation occaecat in ad duis excepteur nulla enim eiusmod mollit consequat adipisicing fugiat.Laborum eiusmod id qui sunt id nulla nostrud est exercitation qui.</li>
+                    <li>Exercitation id in ad anim nostrud aliquip.Veniam sint duis laboris et esse deserunt est non cillum excepteur id eu eiusmod.</li>
+                    <li>Nisi aliquip adipisicing deserunt Lorem anim irure non nostrud.Amet pariatur consequat culpa qui.</li>
+                    <li>Minim commodo non consectetur id laboris occaecat sit do.Dolor esse irure mollit eiusmod in sint consequat magna elit eiusmod mollit anim eu aliqua.</li>
                 </ul>
             </div>
-            <section aria-labelledby="pictures of food">
-                    <h2 id="pictures of food"></h2>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-            </section>
-            <section aria-labelledby="about us">
-                <h2 id="about us"></h2>
-                <p></p>
-                <p></p>
-            </section>
         </main>
         <footer>
             <div class="halfer"></div>
